@@ -1,3 +1,8 @@
+2013-10-17  Ian Lance Taylor  <iant@google.com>
+
+	* elf.c (elf_add): Don't get the wrong offsets if a debug section
+	is missing.
+
 2013-10-15  David Malcolm  <dmalcolm@redhat.com>
 
 	* configure.ac: Add --enable-host-shared, setting up
